# akars

./: .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
scripts/: build.sh  env.sh  linker.sh  setup.sh  upload.sh
src/: cv_bridge.cpp  image_bridge.rs  lib.rs  main.rs  robot.rs  tpu.rs
toolchains/: .gitignore
