[package]
name = "akars"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["net", "rt-multi-thread", "time"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zune-core = "0.5"
zune-jpeg = "0.5"

[profile.release]
lto = "thin"
